# gridline-forge

./: .dockerignore  CLAUDE.md  COMPARISON.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-release.yml
benches/: processing.rs
comparison_output/: 01_original_with_grid.tif  02_gridlineforge_output.tif  03_mindagap_output.tif  04_difference_amplified.tif
comparison_output/gridline/: project.qpproj
comparison_output/gridline/data/2/: data.qpdata  server.json  summary.json
src/: lib.rs  main.rs  types.rs
src/detection/: frequency.rs  mod.rs
src/duplicate_finder/: mod.rs  tsv_io.rs
src/image_io/: mod.rs
src/inpainting/: directional.rs  fast_march.rs  mod.rs
src/parallel/: mod.rs
src/refinement/: gaussian.rs  mod.rs
tests/: README.md  generate_comparison.rs  integration.rs
